--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta name="theme-color" content="#3b82f6" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="default" />
-    <meta name="apple-mobile-web-app-title" content="a-now" />
-    <meta name="application-name" content="a-now" />
+    <meta name="apple-mobile-web-app-title" content="FocusFlow" />
+    <meta name="application-name" content="FocusFlow" />
     <meta name="msapplication-TileColor" content="#3b82f6" />
     <meta name="msapplication-config" content="/browserconfig.xml" />
 
@@ -16,31 +16,31 @@
     <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
     <link rel="manifest" href="/manifest.json" />
 
-    <meta name="description" content="a-now - Gestao de tarefas e produtividade" />
-    <meta name="author" content="a-now Team" />
-    <meta name="keywords" content="tarefas, produtividade, gestao, objetivos" />
+    <meta name="description" content="FocusFlow - Gestão de tarefas e produtividade" />
+    <meta name="author" content="FocusFlow Team" />
+    <meta name="keywords" content="tarefas, produtividade, gestão, objetivos" />
     <meta name="robots" content="index, follow" />
 
-    <meta property="og:title" content="a-now - Gestao de tarefas e produtividade" />
-    <meta property="og:description" content="Aplicacao para gestao de tarefas, objetivos e produtividade" />
+    <meta property="og:title" content="FocusFlow - Gestão de tarefas e produtividade" />
+    <meta property="og:description" content="Aplicação para gestão de tarefas, objetivos e produtividade" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="/og-image.png" />
-    <meta property="og:url" content="https://a-now.app" />
-    <meta property="og:site_name" content="a-now" />
+    <meta property="og:url" content="https://focusflow.app" />
+    <meta property="og:site_name" content="FocusFlow" />
     <meta property="og:locale" content="pt_PT" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@anowapp" />
-    <meta name="twitter:creator" content="@anowapp" />
-    <meta name="twitter:title" content="a-now - Gestao de tarefas e produtividade" />
-    <meta name="twitter:description" content="Aplicacao para gestao de tarefas, objetivos e produtividade" />
+    <meta name="twitter:site" content="@focusflowapp" />
+    <meta name="twitter:creator" content="@focusflowapp" />
+    <meta name="twitter:title" content="FocusFlow - Gestão de tarefas e produtividade" />
+    <meta name="twitter:description" content="Aplicação para gestão de tarefas, objetivos e produtividade" />
     <meta name="twitter:image" content="/twitter-image.png" />
 
     <meta name="format-detection" content="telephone=no" />
     <meta name="mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
 
-    <title>a-now - Gestao de tarefas e produtividade</title>
+    <title>FocusFlow - Gestão de tarefas e produtividade</title>
   </head>
 
   <body>
@@ -49,8 +49,8 @@
 
     <noscript>
       <div style="text-align: center; padding: 50px; font-family: Arial, sans-serif;">
-        <h1>a-now</h1>
-        <p>Esta aplicacao requer JavaScript para funcionar.</p>
+        <h1>FocusFlow</h1>
+        <p>Esta aplicação requer JavaScript para funcionar.</p>
         <p>Por favor, ative o JavaScript no navegador.</p>
       </div>
     </noscript>
